
Changes after 1.0b3:
-----------------------------

New Features:
       - Per feed interval fetching -smt
       - Konqueror plugin for adding feeds to aKregator from context menu -PhantomsDad
       - Command line options for adding feeds -PhantomsDad
       - In case the feed doesn't provide an article <link> element, fall back to the <guid> permaLink -sg
       
Bug Fixes:
       - Various frame-switching bug fixes -smt
       - Fix favicon loading crash (#82682) -smt 
       - Various stop-button related bug fixes -smt
       - Changed "Copy Link Location" to "Copy Link Address" because of the new naming standard of KDE -tpr
       - Fix archiving of article <guid> elements -sg

Changes after 1.0b2:
-----------------------------

New Features:

       - Configuration dialog added -tpr
       - Kontact plugin added -smt
       - Ability to mark all entries as read on exit -tpr
       - Ability to change middle mouse button behaviour in browser -tpr
       - Ability to specify external browser (KDE default or custom command) -PhantomsDad
       - Fetch all feeds every <num> minutes -tpr
       - Display unread count in the tooltip of the tray icon -tpr

Bug Fixes:

#82618 - Don't crash if there's no kpart available -tpr
#82691 - Don't minimize but close aKregator when session is shutting down -tpr
       - Mark all read marks everything as read -tpr
#82752 - Mark all as read marks every entry in feed(group), mark all feeds as read marks every feed(group) as read -tpr
       - Make the feed tree drop visualizer work -sg
       - Make "Copy Link Location" copy into the selection clipboard as well -sg

Changes from 1.0b1 to 1.0b2:
-----------------------------


New Features:

       - Add Search bar for searching text in articles
       - Clicking on a folder will show articles of all subitems
       - Feed images are stored and aren't fetched every time
       - Show progress while loading feed list
       - Make all shortcuts configurable